--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,13 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+nightly = []
+default=["nightly"]
+
 [dependencies]
+log = "0.4.11"
+
+[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
+memmap = "0.7"
+perf-event-open-sys = "1.0.1"
