--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,20 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-nightly = []
-default=["nightly"]
 
 [dependencies]
 log = "0.4.11"
 
+[profile.release]
+panic = "abort"
+debug = true
+opt-level = 3
+lto="thin"
+
+[profile.dev]
+panic = "abort"
+opt-level = 0
+
 [target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
-memmap = "0.7"
-perf-event-open-sys = "1.0.1"
+memmap2 = "0.2.1"
+perf-event-open-sys = "3.0.0"
